--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,113 @@
+@import url("https://fonts.googleapis.com/css2?family=Philosopher:wght@400;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+/* Overwriting Base  */
+@layer base {
+  body {
+    font-family: var(--font-Philosopher);
+  }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Philosopher", sans-serif !important;
+  }
+}
+/* Custom Theme  */
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --border-color-light: #e5e7eb;
+  --border-color-dark: #2e2e2f;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.logoText {
+  font-family: "Philosopher", sans-serif !important;
+}
+
+.border-color {
+  border-color: var(--border-color-dark);
+}
+
+[data-theme="lightTheme"] .border-color {
+  border-color: var(--border-color-light);
+}
+
+[data-theme="darkTheme"] .border-color {
+  border-color: var(--border-color-dark);
+}
+
+.shape-divider-bottom {
+  bottom: -1px;
+  left: 0;
+  line-height: 0;
+  overflow: hidden;
+  position: absolute;
+  width: 100%;
+  & svg {
+    display: block;
+    height: 100px;
+    position: relative;
+    transform: rotateY(180deg);
+    width: calc(100% + 1.3px);
+  }
+  & .shape-fill {
+    fill: #f4fbf4;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+[data-theme="darkTheme"] .shape-divider-bottom .shape-fill {
+  fill: #011203;
+}
+
+[data-theme="darkTheme"] .shape-divider-bottom .shape-fill {
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), #e6e6e8;
+}
+
+.heroBG {
+  background-image: url("/images/bg/whiteBG.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-top: -1.5rem;
+  position: relative;
+  width: 100%;
+}
+
+[data-theme="darkTheme"] .heroBG {
+  background-image: url("/images/bg/darkBG.png");
+}
+
+.box-shadow {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+    rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  &:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+      rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+    /* box-shadow: #000033 0px 60px 40px -7px; */
+  }
+}
+
+[data-theme="darkTheme"] .box-shadow {
+  box-shadow: rgba(255, 255, 255, 0.15) 0px 10px 15px -3px,
+    rgba(255, 255, 255, 0.055) 0px 4px 6px -2px;
+  &:hover {
+    box-shadow: rgba(255, 255, 255, 0.15) 0px 20px 25px -5px,
+      rgba(255, 255, 255, 0.045) 0px 10px 10px -5px;
+  }
+}
+
+.page-active {
+  @apply text-primary font-bold;
+}
+.logo {
+  @apply mb-0 text-2xl font-bold;
+}
+
+.btn-custom {
+  @apply min-h-10 rounded-3xl w-36 h-10 text-base text-white;
 }
